estilos para el popup del mapa

--- a/css/styles.css
+++ b/css/styles.css
@@ -318,7 +318,7 @@ body {
     cursor: pointer;
 }
 
-/*STRIPE RULES*/
+/* STRIPE RULES */
 
 .button-shw {
     box-shadow: 0 4px 6px rgba(50, 50, 93, .11), 0 1px 3px rgba(0, 0, 0, .08);
@@ -1011,10 +1011,18 @@ path.q2-3 {
     fill: #e0ecf4;
 }
 
+.mapa {
+    position: relative;
+
+    width: 60%;
+}
+
 .tooltip {
     font-weight: bold;
 
     position: absolute;
+    top: 0;
+    right: 0;
 
     display: none;
 
