--- a/src/css/_comun.css
+++ b/src/css/_comun.css
@@ -20,8 +20,7 @@ body {
     cursor: pointer;
 }
 
-
-/*STRIPE RULES*/
+/* STRIPE RULES */
 
 .button-shw {
     box-shadow: 0 4px 6px rgba(50, 50, 93, .11), 0 1px 3px rgba(0, 0, 0, .08);
@@ -96,10 +95,7 @@ body {
     z-index: 10;
 }
 
-
-
 /* ESTILOS C3 */
-
 
 /* stylelint-disable */
 
@@ -672,8 +668,15 @@ path.q2-3 {
     fill: #e0ecf4;
 }
 
+.mapa {
+    width: 60%;
+    position: relative;
+}
+
 .tooltip {
     position: absolute;
+    top: 0;
+    right: 0;
     border-radius: 3px;
     background-color: #f1f1f1;
     color: black;
