eliminando colores diferenciadores e incluyendo mas padding al footer

--- a/css/styles.css
+++ b/css/styles.css
@@ -2035,6 +2035,10 @@ path.q2-3 {
   padding-bottom: 2rem;
 }
 
+.padding-b4 {
+  padding-bottom: 4rem;
+}
+
 .padding-r1-5 {
   padding-right: 1.5rem;
 }
