--- a/css/styles.css
+++ b/css/styles.css
@@ -1019,8 +1019,6 @@ path.q2-3 {
     top: 0;
     right: 10vw;
 
-    display: none;
-
     min-width: 260px;
     height: 60%;
     margin-top: 10px;
@@ -1094,6 +1092,34 @@ path.q2-3 {
 
 .mapa-elecciones path {
   stroke: #111;
+}
+
+#map {
+    width: 100%;
+    height: 500px;
+}
+
+.SvgOverlay {
+    position: relative;
+
+    width: 100%;
+    height: 500px;
+}
+
+.SvgOverlay svg {
+    position: absolute;
+    top: -4000px;
+    left: -4000px;
+
+    width: 8000px;
+    height: 8000px;
+}
+
+.SvgOverlay path {
+    stroke: Orange;
+    stroke-width: 2px;
+    fill: Orange;
+    fill-opacity: .3;
 }
 
 .btn-share {
