--- a/src/css/_comun.css
+++ b/src/css/_comun.css
@@ -679,7 +679,6 @@ path.q2-3 {
     font-weight: bold;
     padding: 10px 0;
     vertical-align: middle;
-    display: none;
     min-width: 260px;
     height: 60%;
     margin-top: 10px;
@@ -738,4 +737,30 @@ path.q2-3 {
     path {
         stroke: #111;
     }
+}
+
+#map {
+    width: 100%;
+    height: 500px;
+}
+
+.SvgOverlay {
+    position: relative;
+    width: 100%;
+    height: 500px;
+}
+
+.SvgOverlay svg {
+    position: absolute;
+    top: -4000px;
+    left: -4000px;
+    width: 8000px;
+    height: 8000px;
+}
+
+.SvgOverlay path {
+    stroke: Orange;
+    stroke-width: 2px;
+    fill: Orange;
+    fill-opacity: .3;
 }
